Auth system added and misc.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,33 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.b0db4914e63e7c16c87d.hot-update.js": "/js/app.b0db4914e63e7c16c87d.hot-update.js",
+    "/js/app.5bbb2c72f4a51d92af33.hot-update.js": "/js/app.5bbb2c72f4a51d92af33.hot-update.js",
+    "/js/app.f3cfad4d4bcf22a6861f.hot-update.js": "/js/app.f3cfad4d4bcf22a6861f.hot-update.js",
+    "/js/app.3fd1770f9b5b6c2f22c2.hot-update.js": "/js/app.3fd1770f9b5b6c2f22c2.hot-update.js",
+    "/js/app.fddacf25ba9410534f3d.hot-update.js": "/js/app.fddacf25ba9410534f3d.hot-update.js",
+    "/js/app.c44efd9abb6f6b6f2960.hot-update.js": "/js/app.c44efd9abb6f6b6f2960.hot-update.js",
+    "/js/app.755e3d40c55aa322ed08.hot-update.js": "/js/app.755e3d40c55aa322ed08.hot-update.js",
+    "/js/app.7fcd77ca2acef82549e7.hot-update.js": "/js/app.7fcd77ca2acef82549e7.hot-update.js",
+    "/js/app.ad3edcf640335514eab2.hot-update.js": "/js/app.ad3edcf640335514eab2.hot-update.js",
+    "/js/app.12d17ccfc1f5fa6ce924.hot-update.js": "/js/app.12d17ccfc1f5fa6ce924.hot-update.js",
+    "/js/app.e4d6c73bb035580e6bcc.hot-update.js": "/js/app.e4d6c73bb035580e6bcc.hot-update.js",
+    "/js/app.b73ce3ab515efa08774d.hot-update.js": "/js/app.b73ce3ab515efa08774d.hot-update.js",
+    "/js/app.7ea9754c861c4b2ac190.hot-update.js": "/js/app.7ea9754c861c4b2ac190.hot-update.js",
+    "/js/app.44aa83622d7b57b663d4.hot-update.js": "/js/app.44aa83622d7b57b663d4.hot-update.js",
+    "/js/app.3a56bf5d937939182344.hot-update.js": "/js/app.3a56bf5d937939182344.hot-update.js",
+    "/js/app.925a53d633ab0fdc5c83.hot-update.js": "/js/app.925a53d633ab0fdc5c83.hot-update.js",
+    "/js/app.37627d21858d932fbe68.hot-update.js": "/js/app.37627d21858d932fbe68.hot-update.js",
+    "/js/app.89ad21dfeffb78d6ae95.hot-update.js": "/js/app.89ad21dfeffb78d6ae95.hot-update.js",
+    "/js/app.c0afe8d27c3b3f43de05.hot-update.js": "/js/app.c0afe8d27c3b3f43de05.hot-update.js",
+    "/js/app.2173dd81e99f33f3e56d.hot-update.js": "/js/app.2173dd81e99f33f3e56d.hot-update.js",
+    "/js/app.9ca6f04d624617151e03.hot-update.js": "/js/app.9ca6f04d624617151e03.hot-update.js",
+    "/js/app.7a8335d8213b0d601f59.hot-update.js": "/js/app.7a8335d8213b0d601f59.hot-update.js",
+    "/js/app.bf73a6a1710864486fe4.hot-update.js": "/js/app.bf73a6a1710864486fe4.hot-update.js",
+    "/js/app.73c00099fa15da4566ee.hot-update.js": "/js/app.73c00099fa15da4566ee.hot-update.js",
+    "/js/app.a403c84463f3dc3ae4e4.hot-update.js": "/js/app.a403c84463f3dc3ae4e4.hot-update.js",
+    "/js/app.905297d40821b4ef2a86.hot-update.js": "/js/app.905297d40821b4ef2a86.hot-update.js",
+    "/js/app.6994ee6d82f516a64626.hot-update.js": "/js/app.6994ee6d82f516a64626.hot-update.js",
+    "/js/app.8a7e67cf1bf5273a9ac4.hot-update.js": "/js/app.8a7e67cf1bf5273a9ac4.hot-update.js",
+    "/js/app.121b5fdfa7bf9f715970.hot-update.js": "/js/app.121b5fdfa7bf9f715970.hot-update.js"
 }
